ciを更新